internal/gatewayapi/testdata/envoyextensionpolicy-with-extproc-with-mixed-backendrefs.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: default
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - www.foo.com
    parentRefs:
    - namespace: default
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: /foo
      backendRefs:
      - name: service-1
        port: 8080
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-2
  spec:
    hostnames:
    - www.bar.com
    parentRefs:
    - namespace: default
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: /bar
      backendRefs:
      - name: service-1
        port: 8080
referenceGrants:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: ReferenceGrant
  metadata:
    namespace: envoy-gateway
    name: referencegrant-1
  spec:
    from:
    - group: gateway.envoyproxy.io
      kind: EnvoyExtensionPolicy
      namespace: default
    to:
    - group: ''
      kind: Service
    - group: gateway.envoyproxy.io
      kind: Backend
envoyExtensionPolicies:
# This policy uses an IP+FQDN mix which is invalid.
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    namespace: default
    name: policy-ip-fqdn-mix
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
    extProc:
    - backendRefs:
      - Name: backend-ip
        Kind: Backend
        Group: gateway.envoyproxy.io
      - Name: backend-fqdn
        Namespace: envoy-gateway
        Kind: Backend
        Group: gateway.envoyproxy.io
# This policy uses an IP+UDS mix which is valid (both static types).
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    namespace: default
    name: policy-ip-uds-mix
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-2
    extProc:
    - backendRefs:
      - Name: backend-ip-uds-mixed
        Kind: Backend
        Group: gateway.envoyproxy.io
backends:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-ip
    namespace: default
  spec:
    endpoints:
    - ip:
        address: 1.1.1.1
        port: 3001
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-ip-uds-mixed
    namespace: default
  spec:
    endpoints:
    - ip:
        address: 2.2.2.2
        port: 3002
    - unix:
        path: /var/run/grpc.sock
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-fqdn
    namespace: envoy-gateway
  spec:
    endpoints:
    - fqdn:
        hostname: example.com
        port: 3001
